random generator game

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -9,6 +9,11 @@
         .style{
             text-align: center;
             color: red;
+            transition: all .3s ease;
+        }
+        .style:hover{
+            color: blue;
+            font-size: 2rem;
         }
     </style>
 </head>
